--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/cashier": "^14.12",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spatie/laravel-stripe-webhooks": "^3.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
